increasing test coverage

--- a/website/index.html
+++ b/website/index.html
@@ -81,19 +81,11 @@
 
 
 	<ul>
-	<li>rubyforge: <span class="caps">MISSING IN ACTION</span></li>
+	<li>rubyforge: <a href="http://rubyforge.org/scm/?group_id=6141">http://rubyforge.org/scm/?group_id=6141</a></li>
 	</ul>
 
 
-	<p><span class="caps">TODO</span> &#8211; You can not created a RubyForge project, OR have not run <code>rubyforge config</code>
-yet to refresh your local rubyforge data with this projects&#8217; id information.</p>
-
-
-	<p>When you do this, this message will magically disappear!</p>
-
-
-	<p>Or you can hack website/index.txt and make it all go away!!</p>
-
+<pre>git clone git://rubyforge.org/jetty-rails.git</pre>
 
 	<ul>
 	<li>github: <a href="http://github.com/fabiokung/jetty-rails/tree/master">http://github.com/fabiokung/jetty-rails/tree/master</a></li>
